plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
}

repositories {
    mavenCentral()
}

group 'net.speciesm'
version '0.2.0'

sourceCompatibility = 11
mainClassName = 'particlefun/net.speciesm.particlefun.Main'

repositories {
    mavenCentral()
}

javafx {
    version = "12.0.1"
    modules = [ 'javafx.controls', 'javafx.base', 'javafx.fxml', 'javafx.graphics' ]
}

//def currentOS = org.gradle.internal.os.OperatingSystem.current()
//ext.platform = currentOS.isWindows() ? 'windows' : currentOS.isLinux() ? 'linux' : currentOS.isMacOsX() ? 'mac' : 'undefined'

dependencies {
    annotationProcessor 'org.projectlombok:lombok:1.18.2'
    compileOnly 'org.projectlombok:lombok:1.18.2'

//    compile "org.openjfx:javafx-base:11:$platform"
//    compile "org.openjfx:javafx-graphics:11:$platform"
//    compile "org.openjfx:javafx-controls:11:$platform"
//    compile "org.openjfx:javafx-fxml:11:$platform"

    compile 'org.slf4j:slf4j-api:1.7.25'
    runtimeOnly 'org.slf4j:slf4j-simple:1.7.25'

    //compile 'org.owasp:dependency-check-gradle:3.3.2'

    testCompile 'junit:junit:5.4.2'

}


//compileJava {
//    doFirst {
//        options.compilerArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.controls',
//                '--add-modules', 'javafx.fxml',
//                '--add-modules', 'lombok'
//        ]
//    }
//}
//
//run {
//    doFirst {
//        jvmArgs = [
//                '--module-path', classpath.asPath,
//                '--add-modules', 'javafx.controls',
//                '--add-modules', 'javafx.fxml'
//        ]
//    }
//}


//jar {
//    manifest {
//        attributes(
//                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
//                'Main-Class': 'net.speciesm.particlefun.Main'
//        )
//    }
//}

//apply plugin: 'javafx-gradle-plugin'

//jfx {
//    // minimal requirement for jfxJar-task
//    mainClass = mainClassName
//
//    // minimal requirement for jfxNative-task
//    vendor = 'SpeciesM.net'
//}
